Converting to Spring Boot.  Can log in and load schedule page.